--- a/style.css
+++ b/style.css
@@ -226,10 +226,19 @@ span{
 }
 
 @keyframes words{
-    0%, 15%{
+    0%, 20%{
         content: "Student";
     }
-    16%, 30%{
+    21%, 40%{
+        content: "Web Developer";
+    }
+    41%, 60%{
+        content: "Student";
+    }
+    61%, 80%{
+        content: "Web Developer";
+    }
+    81%, 100%{
         content: "Web Developer";
     }
 }
